update login page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="topnav">
         <a href="#">Home</a>
         <a href="#">Post</a>
-        <a href="../src/auth/signin.html">Login</a>
+        <a href="../baocao/src/auth/signin.html">Login</a>
       </div>
       
 </body>
